# BakaAllocators

./: CMakeLists.txt
examples/: double_stack_alloc.cpp  pool_allocator.cpp  stack_alloc.cpp
include/: baka_alloc_commons.h  baka_double_stack_allocator.h  baka_pool_allocator.h  baka_stack_allocator.h
src/: baka_double_stack_allocator.cpp  baka_stack_allocator.cpp
